crates/formatter/tests/snapshots/snapshots__migrations__000159_workspace_agent_stats_template_id_created_at_user_id_idx.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop index workspace_agent_stats_template_id_created_at_user_id_idx;
