crates/formatter/tests/snapshots/snapshots__migrations__000159_workspace_agent_stats_template_id_created_at_user_id_idx.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
create index workspace_agent_stats_template_id_created_at_user_id_idx
on workspace_agent_stats
using btree (template_id, created_at desc, user_id)
where connection_count > 0;

comment on index workspace_agent_stats_template_id_created_at_user_id_idx is 'Support index for template insights endpoint to build interval reports faster.';
