crates/formatter/tests/snapshots/snapshots__migrations__000162_workspace_automatic_updates.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table workspaces drop column if exists automatic_updates;
drop type if exists automatic_updates;
