crates/formatter/tests/snapshots/snapshots__migrations__000162_workspace_automatic_updates.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- making this an enum in case we want to later add other options, like 'if_compatible_vars'
create type automatic_updates as enum ('always', 'never');
alter table workspaces
	add column if not exists automatic_updates automatic_updates not null default 'never'::automatic_updates;
