crates/formatter/tests/snapshots/snapshots__migrations__000163_external_auth_extra.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table external_auth_links drop column oauth_extra;
