crates/formatter/tests/snapshots/snapshots__migrations__000163_external_auth_extra.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table external_auth_links add column oauth_extra jsonb;
